--- a/TheLeftExit.Memory.csproj
+++ b/TheLeftExit.Memory.csproj
@@ -14,6 +14,10 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <AssemblyVersion>3.3.2.0</AssemblyVersion>
     <FileVersion>3.3.2.0</FileVersion>
+    <SignAssembly>false</SignAssembly>
+    <ApplicationIcon />
+    <OutputType>Library</OutputType>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
